force-app/main/default/objects/SurveyPage__c/SurveyPage__c.object-meta.xml
<CustomObject>
    <label>Survey Page</label>
    <nameField>
        <label>Survey Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>