force-app/main/default/objects/SurveyPage__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <referenceTo>Page__c</referenceTo>
    <relationshipLabel>Related Surveys</relationshipLabel>
    <relationshipName>SurveyPages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>